[tool.poetry]
name = "collection-page-investigation"
version = "0.1.0"
description = ""
authors = ["Mark Baggett <mbagget1@utk.edu>"]
readme = "README.md"
packages = [{include = "collection_page_investigation"}]

[tool.poetry.dependencies]
python = "^3.11"
oauth2client = "^4.1.3"
dash = "^2.7.1"
pandas = "^1.5.2"
plotly = "^5.11.0"
apiclient = "^1.0.4"
dash-google-oauth = "^1.2"
google-api-python-client = "^2.70.0"
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
